<resources>
    <string name="app_name">TraffAppTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dino_run">Dino, Run!</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="fireball">fireball</string>
    <string name="dino">dino</string>
    <string name="game_over">Game Over!</string>
    <string name="again">Again?</string>
    <string name="menu">Menu</string>
</resources>