<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/volcano_back"
    tools:context=".GameOverFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/atomic_age"
        android:padding="12dp"
        android:text="@string/game_over"
        android:textAllCaps="true"
        android:textColor="#5D4037"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/againBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_linear"
            android:fontFamily="@font/atomic_age"
            android:padding="12dp"
            android:text="@string/again"
            android:textAllCaps="true"
            android:textColor="#5D4037"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menuBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/rounded_linear"
            android:fontFamily="@font/atomic_age"
            android:padding="12dp"
            android:text="@string/menu"
            android:textAllCaps="true"
            android:textColor="#5D4037"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>